issue on dark mode when image-open

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,6 +216,8 @@
             top: 0;
             width: 100%;
             height: 100%; 
+            backdrop-filter: blur(26px);
+            -webkit-backdrop-filter: blur(26px);
             transition: backdrop-filter 0.3s ease, -webkit-backdrop-filter 0.3s ease;
             overflow: hidden;
         }
@@ -226,6 +228,7 @@
             width: auto; 
             max-width: 90%;
             object-fit: contain; 
+            border-radius: 6px;
         }
         .modal-content {
             animation-name: zoom;
@@ -234,12 +237,6 @@
         @keyframes zoom {
             from {transform: scale(0)} 
             to {transform: scale(1)}
-        }
-        @media (prefers-color-scheme: dark) {
-            .modal {
-                backdrop-filter: blur(26px);
-                -webkit-backdrop-filter: blur(26px);
-            }
         }
 
     /* Media Queries */
